Junior: Improving templating logic to use partial blocks of handlebars

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,19 +1,22 @@
+
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Billbo</title>
+    <title>Billbo - Help an institution wisely</title>
     <link rel="stylesheet" href="styles/libs.css" />
     <script src="scripts/libs-header.js"></script>
   </head>
   <body>
 
-<div class="row">
-  <div class="large-12 columns">
-    <h1>This is Billbo!</h1>
-  </div>
-</div>
+    
+    <div class="row">
+      <div class="large-12 columns">
+        <h1>This is Billbo!</h1>
+      </div>
+    </div>
+    
 
     <script src="scripts/libs.js"></script>
     <script>$(document).foundation();</script>
