#6 #7 adding donate button and its modal to retrive donator's email

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Billbo - Ajude uma instituição aonde ela mais precisa</title>
     <link rel="stylesheet" href="styles/libs.css" />
+    <link rel="stylesheet" href="styles/app.css" />
     <script src="scripts/libs-header.js"></script>
   </head>
   <body>
@@ -20,7 +21,7 @@
     <section class="row">
       <div class="small-12 medium-4 columns" style="text-align: center">
         <a class="th" href="#">
-          <img src="http://placehold.it/300?text=Logo+Instituição" alt="Logo Instituição" />
+          <img src="images/logo.jpg" alt="Logo Instituição" />
         </a>
       </div>
       <div class="small-12 medium-8 columns">
